Fix product btn / burger active add z-index 100

--- a/src/components/main/product_listing/products/Product/Product.module.css
+++ b/src/components/main/product_listing/products/Product/Product.module.css
@@ -107,6 +107,7 @@
   margin-left: 5px;
   margin-top: -5px;
   mask-image: url("../../../../../assets/icons/cart.svg");
+  mask-size: contain;
 }
 
 .description {
